update favicon and site title to GhostRoom branding

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo1-crop.png" />
+    <link rel="icon" type="image/png" href="/gh-crop.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emperor Chat</title>
+    <title>GhostRoom | Vanishing Conversations</title>
   </head>
   <body>
     <div id="root"></div>
